--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
         "@babel/register": "^7.18.9",
         "@ffmpeg/core": "^0.11.0",
         "@ffmpeg/ffmpeg": "^0.11.6",
+        "axios": "^1.3.4",
         "bcryptjs": "^2.4.3",
         "blob-polyfill": "^7.0.20220408",
         "cookie-parser": "^1.4.6",
