--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,8 @@
         "react-router-dom": "^6.0.0",
         "react-scripts": "5.0.1",
         "uninstall": "^0.0.0",
+        "wavesurfer-react": "^2.2.2",
+        "wavesurfer.js": "^6.6.1",
         "web-vitals": "^2.1.4"
     },
     "scripts": {
