--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,8 @@
         "blob-polyfill": "^7.0.20220408",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "csv-parser": "^3.0.0",
+        "csv-writer": "^1.6.0",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "fetch": "^1.1.0",
@@ -28,6 +30,7 @@
         "lamejs": "^1.2.1",
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
+        "papaparse": "^5.4.1",
         "pg": "^8.9.0",
         "uuid": "^9.0.0"
     }
