--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
         "@babel/register": "^7.18.9",
         "@ffmpeg/core": "^0.11.0",
         "@ffmpeg/ffmpeg": "^0.11.6",
+        "archiver": "^5.3.1",
         "axios": "^1.3.4",
         "bcryptjs": "^2.4.3",
         "blob-polyfill": "^7.0.20220408",
@@ -28,6 +29,7 @@
         "fetch": "^1.1.0",
         "form-data": "^4.0.0",
         "jsonwebtoken": "^9.0.0",
+        "jszip": "^3.10.1",
         "lamejs": "^1.2.1",
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
