--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
         "axios": "^1.3.2",
         "fs": "^0.0.1-security",
         "history": "^5.3.0",
+        "jszip": "^3.10.1",
         "latest": "^0.2.0",
         "moment": "^2.29.4",
         "react": "^18.2.0",
