--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
         "jsonwebtoken": "^9.0.0",
         "jszip": "^3.10.1",
         "lamejs": "^1.2.1",
+        "lnbits": "^1.1.5",
         "multer": "^1.4.5-lts.1",
         "multer-s3": "^3.0.1",
         "papaparse": "^5.4.1",
