--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
         "blob-polyfill": "^7.0.20220408",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "crypto-js": "^4.1.1",
         "csv-parser": "^3.0.0",
         "csv-to-js-parser": "^2.3.5",
         "csv-writer": "^1.6.0",
