--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
         "jszip": "^3.10.1",
         "latest": "^0.2.0",
         "moment": "^2.29.4",
+        "qrcode.react": "^3.1.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.0.0",
