--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
     "dependencies": {
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@headlessui/react": "^1.7.14",
+        "@heroicons/react": "^2.0.17",
         "@mui/icons-material": "^5.11.0",
         "@mui/material": "^5.11.7",
         "@testing-library/jest-dom": "^5.16.5",
@@ -21,6 +23,8 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.0.0",
         "react-scripts": "5.0.1",
+        "sass": "^1.62.1",
+        "tailwindcss": "^3.3.2",
         "uninstall": "^0.0.0",
         "wavesurfer-react": "^2.2.2",
         "wavesurfer.js": "^6.6.1",
